--- a/pages/rxjs_demo.html
+++ b/pages/rxjs_demo.html
@@ -8,15 +8,19 @@
 <script>
 // var a = new rxjs.of(1, 2, 3, 5, 6, 7, 8, 9, rxjs.asapScheduler)
 // var a = new rxjs.of(1, 2, 3, 5, 6, 7, 8, 9, rxjs.asyncScheduler)
-var a = new rxjs.of(1, 2, 3, 5, 6, 7, 8, 9, rxjs.queueScheduler)
-var a = new rxjs.interval(1000)
+var a = new rxjs.of(1, 2, 3, 5, 6, 7, 8, 9, rxjs.queueScheduler.schedule(x=>2*x,1,1))
+// var a = new rxjs.interval(1000)
+
+// var a = new rxjs.of(1, 2, 3, 5, 6, 7, 8, 9)
 
 // var subscription = Rx.Observable.interval(500).take(4).subscribe(function (x) { console.log(x) });
 
-a.pipe(rxjs.operators.take(3))
-    .subscribe(
+// a.pipe(rxjs.operators.take(3))
+    a.subscribe(
         (num) => console.log('xxx: ', num)
     );
+
+
 </script>
 
 <body>
