--- a/pages/tool/arr_compare.html
+++ b/pages/tool/arr_compare.html
@@ -34,7 +34,7 @@
                 }
             }
             $("#result2").val(string2);
-            $('#A-B').text(string.split('\n').length);
+            $('#A-B').text(string2.split('\n').length);
 
             for (var i = 0; i < content_right.length; i++) {
                 if (!content_left.contains(content_right[i])) {
@@ -42,7 +42,7 @@
                 }
             }
             $("#result3").val(string3);
-            $('#B-A').text(string.split('\n').length);
+            $('#B-A').text(string3.split('\n').length);
         });
 
 
